--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li class="current"><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
+                <li><a href="login.html">Login</a></li>         
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -34,7 +35,6 @@
                             <p>Send Your Querries About <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="contact-form">
-                            <!-- <form action="blogs.html"> -->
                             <form onsubmit="event.preventDefault(); sendQuerry()" id="contact-form" action="#">
                                 <div id="form-error"></div>
                                 <label for="name">Name:</label>
@@ -94,6 +94,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
     
     <script src="js/init-firebase.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
