--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
+                <li><a href="login.html">Login</a></li>        
             </ul>
         </div>
         <script src="js/script.js"></script>
