--- a/login-admin.html
+++ b/login-admin.html
@@ -19,7 +19,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="blogs.html">Blogs</a></li>         
+                <li><a href="blogs.html">Blogs</a></li>
+                <li class="current"><a href="login.html">Login</a></li>
             </ul>
         </div>
         <script src="js/script.js"></script>
