chore: updating existing blog

--- a/admin1.html
+++ b/admin1.html
@@ -94,6 +94,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
     
     <script src="js/init-firebase.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/render-users.js"></script>
 </body>
 </html>
