--- a/admin2.html
+++ b/admin2.html
@@ -49,7 +49,7 @@
                             <!-- <input type="text" name="author" placeholder="Author"> -->
                             <textarea id="admin-textarea" name="content" rows="10" placeholder="Content"></textarea>
                             <input id="upload-image" type="file" name="file">
-                            <input onclick="addBlog()" id="submit-image" type="submit" value="Create A Blog">
+                            <input id="submit-image" type="submit" value="Create A Blog">
                         </form>
                     </div>
                 </div>
