--- a/blog2.html
+++ b/blog2.html
@@ -24,6 +24,7 @@
             </ul>
         </div>
         <script src="js/script.js"></script>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nam officiis quasi, vitae aperiam fugit cumque obcaecati quam praesentium molestias.
     </header>
         <section>
             <div class="content-title">
