--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
-                <li class="current"><a href="login.html">Login</a></li>         
+                <li><a onclick="logOut()">Logout</a></li>         
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="login-signup-message">
-                    <p> <span><a  id="logout" href="#" onclick="event.preventDefault(); logOut()">Logout</a></span> </p>
+                    <p> <span><a  id="logout" onclick="event.preventDefault(); logOut()">Logout</a></span> </p>
                 </div>
         </section>
         <footer>
@@ -120,5 +120,6 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/logout.js"></script>
 </body>
 </html>
