--- a/blogs-management.html
+++ b/blogs-management.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li class="current"><a href="blogs.html">Blogs</a></li>         
-                <li><a href="login.html">Logout</a></li>         
+                <li><a onclick="logOut()">Logout</a></li>         
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -37,7 +37,7 @@
                 <div id="my-blogs"></div>
             </div>
             <div class="login-signup-message">
-                <p><span><a id="logout" href="#" onclick="event.preventDefault(); logOut()">Logout</a></span></p>
+                <p><span><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></span></p>
             </div>
         </div>
     </section>
@@ -80,7 +80,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
     
     <script src="js/init-firebase.js"></script>
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/logout.js"></script>
     <script src="js/render-blogs.js"></script>
 </body>
 </html>
