--- a/new-user.html
+++ b/new-user.html
@@ -82,5 +82,6 @@
     
     <script src="js/init-firebase.js"></script>
     <!-- <script src="js/app.js"></script> -->
+    <script src="js/user-location.js"></script>
 </body>
 </html>
