chore: Rendering static blogs from database

--- a/admin2.html
+++ b/admin2.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="login-signup-message">
-                    <p><span><a href="login.html">Logout</a></span> </p>
+                    <p><span><a href="logi.html">Logout</a></span> </p>
                 </div>
         </section>
         <footer>
@@ -98,5 +98,6 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/create-blogs.js"></script>
+    <!-- <script src="js/create-static-blogs.js"></script> -->
 </body>
 </html>
