--- a/edit-blog.html
+++ b/edit-blog.html
@@ -35,7 +35,7 @@
                         <ul>
                             <li><a href="admin.html">Dashboard</a></li>
                             <li><a href="admin1.html">Manage Users</a></li>
-                            <li><a href="#">Create Blog</a></li>
+                            <li><a href="admin2.html">Create Blog</a></li>
                             <li><a href="blogs-management.html">Read Blogs</a></li>
                             <li class="current-menu"><a href="blogs-management.html">Update Blogs</a></li>
                             <li><a href="blogs-management.html">Delete Blogs</a></li>
