--- a/blogs.html
+++ b/blogs.html
@@ -30,8 +30,8 @@
                 <h2><span class="orangered">My</span> <span class="dark-orange">Blogs</span></h2>
             </div>
             <div class="blogs-content">
-                <div class="blogs-holder">
-                    <div class="blog">
+                <div id="blogs-holder" class="blogs-holder">
+                    <!-- <div class="blog">
                         <a href="blog1.html">
                             <div class="blog-box">
                                 <img class="blog-img" src="assets/images/blog1.svg" alt="blog1" width="300" height="220">
@@ -40,8 +40,8 @@
                             <p class="blog-title">Rwanda Military Stories</p>
                             <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
                         </a>
-                    </div>
-                    <div class="blog">
+                    </div> -->
+                    <!-- <div class="blog">
                         <a href="blog2.html">
                             <div class="blog-box">
                                 <img class="blog-img" src="assets/images/blog2.svg" alt="blog2" width="360" height="220">
@@ -50,8 +50,8 @@
                             <p class="blog-title">Portifolio Website</p>
                             <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
                         </a>
-                    </div>
-                    <div class="blog">
+                    </div> -->
+                    <!-- <div class="blog">
                         <a href="blog3.html">
                             <div class="blog-box">
                                 <img class="blog-img" src="assets/images/blog3.svg" alt="blog3" width="360" height="220">
@@ -60,8 +60,8 @@
                             <p class="blog-title">Software Development</p>
                             <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
                         </a>
-                    </div>
-                    <div class="blog">
+                    </div> -->
+                    <!-- <div class="blog">
                         <a href="blog4.html">
                             <div class="blog-box">
                                 <img class="blog-img" src="assets/images/blog4.svg" alt="blog4" width="360" height="220">
@@ -70,8 +70,8 @@
                             <p class="blog-title">Mechanic Tools</p>
                             <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
                         </a>
-                    </div>
-                    <div class="blog">
+                    </div> -->
+                    <!-- <div class="blog">
                         <a href="blog5.html">
                             <div class="blog-box">
                                 <img class="blog-img" src="assets/images/blog5.svg" alt="blog5" width="360" height="220">
@@ -80,8 +80,8 @@
                             <p class="blog-title">Categories of Driving Licence</p>
                             <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
                         </a>
-                    </div>
-                    <div class="blog">
+                    </div> -->
+                    <!-- <div class="blog">
                         <a href="blog6.html">
                             <div class="blog-box">
                                 <img class="blog-img" src="assets/images/blog6.svg" alt="blog6" width="360" height="220">
@@ -90,7 +90,7 @@
                             <p class="blog-title">Git Version Control</p>
                             <p class="blog-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis ex adipiscing elit. Maecenas ex.....</p>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="login-signup-message">
                     <p>Please <span><a href="login.html">login</a></span> to your account</p>
@@ -138,6 +138,7 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/blogs.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
+    <script src="js/render-static-blogs.js"></script>
 </body>
 </html>
