chore: update profile infos

--- a/new-user.html
+++ b/new-user.html
@@ -36,7 +36,7 @@
                 <form action="admin2.html">
                     <input id="create-btn" type="submit" value=" + Create A Blog">
                 </form>
-                <form action="#">
+                <form action="profile-info.html">
                     <input id="profile-infos" type="submit" value=" + Update Your Profile Information">
                 </form>
             </div>
