chore: redirect user to blogs

--- a/blog1.html
+++ b/blog1.html
@@ -47,6 +47,9 @@
 
                             Nam bibendum nunc ac nunc finibus, eget consequat diam pellentesque. In lobortis lacinia viverra. Duis non odio gravida, sagittis sem a, aliquam mauris. Nullam sit amet magna eu velit finibus sagittis vel in mauris. Donec semper congue ligula. Aenean varius tortor a dignissim blandit. Sed volutpat ac dolor sit amet sollicitudin. Proin euismod, nunc ut gravida tempus, lorem dolor blandit arcu, ac faucibus augue ante vitae ante.
                             </p>
+                            <form action="contact.html">
+                                <input id="profile-infos" type="submit" value=" + Give Your Comment On The Blog">
+                            </form>
                         </a>
                     </div>
                 </div>
