--- a/new-user.html
+++ b/new-user.html
@@ -29,7 +29,7 @@
         
         <div class="index-content">
             <div class="content-title">
-                <h2><span class="dark-orange">You are</span> <span class="orangered">Welcome!</span></h2>
+                <h2><span class="dark-orange">You are welcome</span> <span id="user-name" class="orangered"></span></h2>
             </div>
             <div id="new-user">
                 <h2><span class="dark-orange">You can create your own blog post andbring your ideas to life by writing and managing your blog posts anytime.</span></h2>
@@ -83,5 +83,6 @@
     <script src="js/init-firebase.js"></script>
     <!-- <script src="js/app.js"></script> -->
     <script src="js/user-location.js"></script>
+    <script src="js/render-names.js"></script>
 </body>
 </html>
