--- a/profile-info.html
+++ b/profile-info.html
@@ -7,10 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <style>
-        #myimg {
+        #prof-image {
             width: 300px;
             height: 300px;
-            border: 1px solid #a7b5be;
+            border: 1px solid #efeeee;
         }
     </style>
 </head>
@@ -51,17 +51,25 @@
             </div>
             
             <div class="admin2-holder" >
-                <div id="prof-image">
-                    <img src="" id="myimg" alt="image">
+                <div>
+                    <div id="prof-image">
+                        <img src="" id="myimg" alt="image">
+                    </div>
+                    <br><label id='upload-progress'></label><br>
+                    <button id="select">Select Image</button>
+                    <button id="upload">Upload Image</button>
+                    <button id="retrieve">Retrieve Image</button>
                 </div>
-                <br><label id='upload-progress'></label><br>
-                <button id="select">Select Image</button>
-                <button id="upload">Upload Image</button>
-                <button id="retrieve">Retrieve Image</button>
+                <div class="orangered">
+                    <h2>About</h2>
+                    <p class="blog-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quas impedit explicabo corrupti sed hic ullam, debitis natus necessitatibus perferendis?
+                    </p>
+                </div>
             </div>
         </div>
         <div class="login-signup-message">
-            <p><span><a href="logi.html">Logout</a></span> </p>
+            <p><span><a href="login.html">Logout</a></span> </p>
         </div>
     </section>
     <footer>
