ft: Added navigation links for logged in user and logging out

--- a/blogs-management.html
+++ b/blogs-management.html
@@ -36,6 +36,12 @@
             <div class="blogs-holder">
                 <div id="my-blogs"></div>
             </div>
+            
+            <div class="contact-text">
+                <form action="admin1.html">
+                    <input id="create-btn" type="submit" value=" + User Dashboard">
+                </form>
+            </div>
             <div class="login-signup-message">
                 <p><span><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></span></p>
             </div>
