--- a/admin1.html
+++ b/admin1.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
-                <li class="current"><a href="login.html">Login</a></li>         
+                <li class="current"><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></li>         
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -95,5 +95,6 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/render-users.js"></script>
+    <script src="js/logout.js"></script>
 </body>
 </html>
