--- a/admin2.html
+++ b/admin2.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
-                <li class="current"><a href="login.html">Login</a></li>         
+                <li class="current"><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></li>         
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -54,8 +54,8 @@
                     </div>
                 </div>
                 <div class="login-signup-message">
-                    <p><span><a href="logi.html">Logout</a></span> </p>
-                </div>
+                    <p><span><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></span> </p>
+                </div> 
         </section>
         <footer>
             <div class="footer-row1">
@@ -98,6 +98,7 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/create-blogs.js"></script>
+    <script src="js/logout.js"></script>
     <!-- <script src="js/create-static-blogs.js"></script> -->
 </body>
 </html>
