--- a/edit-blog.html
+++ b/edit-blog.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
-                <li class="current"><a href="login.html">Login</a></li>         
+                <li class="current"><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></li>         
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="login-signup-message">
-                    <p><span><a href="login.html">Logout</a></span> </p>
+                    <p><span><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></span> </p>
                 </div>
         </section>
         <footer>
@@ -97,5 +97,6 @@
     
     <script src="js/init-firebase.js"></script>
     <script src="js/edit-blog.js"></script>
+    <script src="js/logout.js"></script>
 </body>
 </html>
