--- a/new-blog.html
+++ b/new-blog.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
-                <li><a href="login.html">Login</a></li>        
+                <li><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></li>        
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -83,6 +83,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
     
     <script src="js/init-firebase.js"></script>
+    <script src="js/logout.js"></script>
     <!-- <script src="js/app.js"></script> -->
     <!-- <script src="js/user-location.js"></script> -->
 </body>
