--- a/new-user.html
+++ b/new-user.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blogs.html">Blogs</a></li>         
-                <li><a href="login.html">Login</a></li>        
+                <li><a id="logout" onclick="event.preventDefault(); logOut()">Logout</a></li>        
             </ul>
         </div>
         <script src="js/script.js"></script>
@@ -33,6 +33,9 @@
             </div>
             <div id="new-user">
                 <h2><span class="dark-orange">You can create your own blog post andbring your ideas to life by writing and managing your blog posts anytime.</span></h2>
+                <form action="admin1.html">
+                    <input id="create-btn" type="submit" value=" + User Dashboard">
+                </form>
                 <form action="admin2.html">
                     <input id="create-btn" type="submit" value=" + Create A Blog">
                 </form>
@@ -84,5 +87,6 @@
     <!-- <script src="js/app.js"></script> -->
     <script src="js/user-location.js"></script>
     <script src="js/render-names.js"></script>
+    <script src="js/logout.js"></script>
 </body>
 </html>
